# django_t6

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  category_fixture.json  docker-compose.yml  product_fixture.json  pyproject.toml
.github/workflows/: ci.yml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_created_at_alter_blogpost_updated_at.py
blog/templates/blog/: base.html  header.html  post_confirm_delete.html  post_create.html  post_details.html  post_list.html
blog/templates/blog/includes/: inc_footer.html  inc_nav.html  inc_post.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_options.py  0004_product_is_published.py  0005_product_owner.py
catalog/templates/catalog/: base.html  category_delete.html  category_details.html  category_form.html  category_list.html  contacts.html  home.html  product_add.html  product_delete.html  product_details.html  product_form.html  products_category.html  products_list.html
catalog/templates/catalog/includes/: inc_category_card.html  inc_contacts_form.html  inc_menu.html  inc_product_card.html  inc_user_for_menu.html
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/fixture/: groups.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile_edit.html  profile_user.html  register.html
