[project]
name = "django-6"
version = "0.1.0"
description = ""
authors = [
    { name = "Oleg Matyushenko", email = "mos_olma@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (==5.0.3)"
]

[tool.poetry]
packages = [{ include = "config" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "isort (>=8.0.0,<9.0.0)"
]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
no_implicit_optional = true
allow_redefinition = true
exclude_gitignore = true

[tool.black]
line-length = 119
target-version = ['py314']
extend-exclude = '''
\\.git
| \\.venv
| venv
| env
| __pycache__
'''

[tool.isort]
line_length = 119
profile = "black"
skip_glob = [".venv/*", "venv/*", "env/*", "__pycache__/*"]